исправил injector и написал тесты